--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -18,7 +18,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/books">Books</a></li>
                 <li class="nav-item"><a class="nav-link" href="/favorites">Favorites</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                <li class="nav-item"><a th:href="@{/}" class="btn btn-danger">🚪 Logout</a></li>
             </ul>
         </div>
     </div>
@@ -63,7 +63,6 @@
     </tbody>
 </table>
 
-<a th:href="@{/}" class="btn btn-danger">🚪 Logout</a>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
